fix(web): theme header and tab separators for dark mode
The header, nav-tab, and menu-group separator borders were computed with lighten(grey, ...), leaving them as bright literals that stayed light-grey on dark surfaces.
Route them through the border tokens instead so they follow the theme.

--- a/web/src/css/header.less
+++ b/web/src/css/header.less
@@ -22,7 +22,7 @@
 header {
     padding-top: 6px;
     background-color: var(--mitmweb-bg);
-    @separator-color: lighten(grey, 15%);
+    @separator-color: var(--mitmweb-border-strong);
     > div:not(:empty) {
         display: block;
         margin: 0;
@@ -107,7 +107,7 @@ header {
     @space: 10px;
     margin-left: -(@menu-group-hmargin + 1px);
     content: " ";
-    border-left: solid 1px lighten(grey, 40%);
+    border-left: solid 1px var(--mitmweb-border-lighter);
     margin-top: @space;
     height: @menu-height - @space*2;
     position: absolute;
