--- a/web/src/css/tabs.less
+++ b/web/src/css/tabs.less
@@ -1,5 +1,5 @@
 .nav-tabs {
-    @separator-color: lighten(grey, 15%);
+    @separator-color: var(--mitmweb-border-strong);
 
     border-bottom: solid @separator-color 1px;
 
